# brooker_corporate_agents

./: .env.example  .gitignore  .pr-body.md  AGENTS.md  CLAUDE.md  PRD.md  README.html  README.md  conftest.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.obsidian/: graph.json  workspace.json
config/: departments.json  departments.schema.json  document_inventory.json  document_inventory.schema.json  escalation_rules.json  obsidian_watch.json  prometheus.yml  synthesis_thresholds.json  wiki_schema.json
docs/: Implementation.md  Portal-Integration.md  TODO-qdrant-ingestion.md  agent-communication-flow.md  agent_deliverables_matrix.md  corpus_conflicts_for_admins.md  dept_test_matrix.md  inventory_test_results_2026-05-26.md  ms-office-pipeline-2026-05-27.md  overclaims-explained-2026-04-29.md  reality-check-2026-04-29.md  roadmap-phase4-6.md  self-improvement-deep-dive-2026-04-29.md  vault-convention-backfill-todo.md  xlsx_compose_spec.md
migrations/: 001_initial_schema.sql  002_add_interaction_fk.sql  003_dept_columns.sql  007_paperclip_tables.sql  008_agent_access.sql  009_phase2_departments.sql  010_phase2_framework.sql  011_eval_framework.sql  012_synthesis_tracker.sql
obsidian-vault/: index.md  log.md
scripts/: api_test_pipeline.py  apply_pending_migrations.py  backfill_tldr.py  bulk_ingest.py  corpus_conflict_audit.py  diff_golden_master.py  embed_server.py  extract_sources.py  fetch_share_xlsx.py  gen_alco_tracker.py  gen_cac_report_from_xlsx.py  gen_cac_templates.py  generate-jwt-keys.sh  (+13 more)
(+1347 files in other folders)
